# episodic-tauri

./: .gitignore  Cargo.toml  README.md  bootstrap.js  index.html  package.json  webpack.config.js
src/: data.rs  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: app.rs  mod.rs  show_list.rs  watch_list.rs
src/tauri/: http.rs
static/: index.html
