[package]
name = "episodic"
version = "0.1.0"
authors = ["Seth Etter <mail@sethetter.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.67"
serde_json = "1.0.57"
serde = { version = "1.0.115", features = ["derive"] }
web-sys = { version = "0.3.45", features = ["console"] }
js-sys = "0.3.45"
wasm-bindgen-futures = "0.4.18"
url = "2.1.1"
anyhow = "1.0.32"
